<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/leve_complete_bg">


        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arial_rounded"
            android:gravity="center"
            android:text="@string/user_heart_des"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/no"
                style="@style/buttontext"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/red_button" />


            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/yes"
                style="@style/buttontext"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/plain_button" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>