<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_luanguage"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_play"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/rate_app_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_play"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/rate_app_text2"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llCenter"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_no"
                    style="@style/buttontext"
                    android:layout_width="143dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/red_button"
                    android:text="@string/no"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/btn_yes"
                    style="@style/buttontext"
                    android:layout_width="143dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/plain_button"
                    android:text="@string/yes"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>