<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmenu"
    android:orientation="vertical"
    tools:context=".NewVersion.Activity.WorldActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/around_the_world_home"
            android:textColor="@color/yellow"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_home" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_fun"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_new_asia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/plain_button"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/asia"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_new_europe"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/plain_button"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/europe"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_new_america"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/plain_button"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/america"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_new_australia"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/plain_button"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/australia"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_new_africa"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/plain_button"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/africa"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>