<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/leve_complete_bg">

        <RelativeLayout
            android:id="@+id/ll"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <RelativeLayout
                android:id="@+id/ll_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txt_unlock_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/you_have_unlock_next_sparkela"
                    android:textColor="@color/lime"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_1"
                android:layout_below="@+id/ll_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/levell"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/arial_rounded"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/scoree"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/arial_rounded"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_2"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/time_bounce"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_time_bonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/arial_rounded"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/ll_3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/ll"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/line" />


        <TextView
            android:id="@+id/txt_total_doller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_3"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded"
            android:gravity="center"
            android:text="@string/totalscore"
            android:textColor="@color/yellow"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_next_level"
            style="@style/buttontext"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_total_doller"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/plain_button"
            android:text="@string/nextlevel"
            android:textSize="20dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_victory"
        android:fontFamily="@font/arial_rounded"
        android:gravity="center_horizontal"
        android:padding="23dp"
        android:text="@string/victory"
        android:textColor="@color/yellow"
        android:textSize="20dp"
        android:textStyle="bold" />


</RelativeLayout>