<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/dialog_high_score" />


        <LinearLayout
            android:id="@+id/ll_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHardScore"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_above="@+id/txt_score"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/hard_score"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewEasyScore"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_above="@+id/txt_score"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/easy_score"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRelaxScore"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_above="@+id/txt_score"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/arial_rounded"
                android:gravity="center"
                android:text="@string/relax_score"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="115dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_around_the_world"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/plain_button"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/around_the_world"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_adventure"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/plain_button"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/adventure"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_around_the_sparkela"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/plain_button"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/around_the_sparkela"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_classic"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/plain_button"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/classic"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/ll"
        android:layout_marginLeft="-20dp"
        android:layout_marginBottom="-70dp"
        android:layout_toRightOf="@+id/ll"
        android:src="@drawable/ic_close" />


</RelativeLayout>